# tempest_depr

./: .directory  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md
.github/workflows/: tempest.yml
rocket-server/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
rocket-server/certs/: localhost-key.pem
rocket-server/migrations/2019-08-12-021255_users/: up.sql
rocket-server/migrations/2019-09-02-090136_user_options/: up.sql
rocket-server/migrations/2019-10-10-141558_mailbox_messages/: up.sql
rocket-server/src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
rocket-server/src/api/v1/: auth_controller.rs  mod.rs  user_controller.rs
rocket-server/src/controllers/: mod.rs
rocket-server/src/controllers/api/v1/: mod.rs
rocket-server/src/db/: auth_repository.rs  email_repository.rs  mod.rs  user_options_repository.rs  users_repository.rs
rocket-server/src/models/: mod.rs  user.rs
rocket-server/src/services/: auth_service.rs  user_service.rs
rocket-server/tests/: auth_tests.rs  common.rs  user_tests.rs  users.rs
rocket-server/tests/common/: mod.rs
vue-client/: README.md  package-lock.json  package.json  vue.config.js
vue-client/certs/: localhost-key.pem  localhost.pem
vue-client/src/: main.ts
vue-client/src/assets/: data.json
vue-client/src/components/core/: Footer.vue  Navigation.vue  SideNav.vue  Toolbar.vue
vue-client/src/components/layouts/: Dashboard-Layout.vue  InboxLayout.vue  Minimal-Layout.vue  Minimal.vue
vue-client/src/components/tempest/: EmailCard.vue
vue-client/src/components/tempest/side-nav/: NavCard.vue  NavCardDropdown.vue  NavTile.vue  NavTileDropdown.vue
vue-client/src/models/: SideNav.ts  user.ts
vue-client/src/router/: router.ts  routes.ts
vue-client/src/services/: api-service.ts  api.axios.ts  index.ts  jwt-service.ts
vue-client/src/store/: index.ts
vue-client/src/store/actions/: auth.ts  user-options.ts
vue-client/src/store/modules/: auth.ts  user-options.ts
vue-client/src/store/types/: auth.ts  user-options.ts
vue-client/src/styles/: _tempest.scss  buefy.scss  colors.scss  index.scss  tempest.scss
vue-client/src/styles/tempest/: _variables.scss
vue-client/src/views/: About.vue  Dashboard.vue  Home.vue  Inbox.vue
vue-client/src/views/authentication/: Login.vue  Register.vue
