[package]
name = "tempest"
version = "0.1.0"
authors = ["Ryan Christian <ryanchristian4427@gmail.com>"]
homepage = "https://github.com/RyanChristian4427/tempest"
description = "A RESTful API for the tempest email client"
edition = "2018"

[dependencies]
rocket = "0.4.2"
diesel = {version = "1.4.1", features = ["postgres", "chrono"]}
dotenv = "0.9.0"
rocket_cors = { version = "0.4.0", default-features = false }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rust-crypto = "0.2.36"
frank_jwt = "3.1.1"
chrono = {version = "0.4", features = ["serde"]}
slug = "0.1.2"
rand = "0.6.3"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "diesel_postgres_pool"]