[package]
name = "tempest"
version = "0.1.0"
authors = ["Ryan Christian <ryanchristian4427@gmail.com>"]
homepage = "https://github.com/RyanChristian4427/tempest"
description = "A RESTful API for the tempest email client"
edition = "2018"

[dependencies]
rocket = {version = "0.4.2", default-features = false}
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.47"
rust_crypto = "0.2.36"
chrono = {version = "0.4.10", features = ["serde"]}
diesel = {version = "1.4.3", features = ["postgres", "chrono"]}
validator = "0.10.0"
validator_derive = "0.10.0"
jsonwebtoken = "6.0.1"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.3.1"
